Bug 1219928 - Skip misspelled words in style blocks. r=enndeakin.